--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.Content {
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Content2 {
+  display: grid;
+  grid-template-areas:
+          "header header header"
+          "nav article ads"
+          "footer footer footer";
+  grid-template-rows: 10% 1fr 10%;
+  grid-template-columns: 1% 1fr 1%;
+  grid-gap: 10px;
+  height: 100vh;
+
+
+}
+footer, article, nav, div {
+  padding: 0px;
+  background: rgba(0, 50, 40, 0.0);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.pageFooter {
+  grid-area: footer;
+  background: rgba(4, 42, 42, 0.5);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.mainNav {
+  grid-area: nav;
 }
-
-.App-link {
-  color: #61dafb;
+.siteAds {
+  grid-area: ads;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text2 {
+  display: grid;
+  grid-area: article;
+  margin-top: 50%;
+  color: #8da6ce;
+  text-align: justify;
+  position: relative;
 }
