--- a/src/Aos/Aos2.css
+++ b/src/Aos/Aos2.css
@@ -5,7 +5,7 @@
 
 }
 .text2 {
-    font-size:3vw;
+    font-size:calc(8px + 16 * (100vw / 1200));
     display: grid;
     margin-top: 0;
     color: #8da6ce;
@@ -37,13 +37,12 @@
 
 .pic2 {
     display: grid;
-    margin-top: 0;
+    margin-top: 1%;
     margin-left: 50%;
     transform: translate(-50%, 0);
     height:auto;
     width: 50%;
-
-
+    padding-bottom: 10%;
 }
 
 /*.bottom {*/
