--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -14,7 +14,6 @@
     display: grid;
     max-width: 1000%;
     overflow: scroll;
-
 }
 .ar > div {
     flex-basis: calc(50% - 40px);
@@ -53,16 +52,28 @@
     width: 0%;
     height: 0%;
 }
+
 .boxes {
+    font-size: calc(10px + 16 * (100vw / 1200));
+    padding: 0;
+    margin-bottom: 0;
+    display: grid;
+    position: relative;
     justify-content: center;
     align-items: center;
-    display: grid;
-    margin: 1%;
-    background-color: rgba(4, 42, 42, 0.5);
-    height: 50vh;
-    max-height: 15vh;
-    box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
-    border-radius: 10px 10px 10px 10px;
+    /*min-height: 100vh;*/
+    /*background: #031321;*/
+    /*font-family: Consolas;*/
+    /*font-size: calc(10px + 16 * (100vw / 1200));;*/
+    /*position: relative;*/
+    /*display: grid;*/
+    /*padding: 5% 8%;*/
+    color: #8da6ce;
+    /*text-transform: uppercase;*/
+    letter-spacing: 2px;
+    text-decoration: silver;
+    transition: 0.2s;
+
 
 }
 
@@ -76,7 +87,7 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     text-decoration: silver;
-    overflow: hidden;
+    /*overflow: hidden;*/
     transition: 0.2s;
 
 
