--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -49,12 +49,11 @@
 }
 
 .menu__list>li {
-    margin: 0 5px 0 0;
+    margin: 0 10px 0 0;
 }
 
 .menu__list>li:hover .sub-menu__list{
     display: block;
-
 }
 
 .menu__link {
@@ -66,22 +65,22 @@
 }
 
 
-.menu__link:hover {
-        padding: 0;
-        margin-bottom: 0;
-        /*font-size: calc(16px + 16 * (100vw / 1200));*/
-        position: relative;
-        /*justify-content: center;*/
-        /*align-items: center;*/
-        color: #255784;
-        background: #2196f3;
-        box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3 ;
-}
+/*.menu__link:hover {*/
+/*        padding: 0;*/
+/*        margin-bottom: 0;*/
+/*        !*font-size: calc(16px + 16 * (100vw / 1200));*!*/
+/*        position: relative;*/
+/*        !*justify-content: center;*!*/
+/*        !*align-items: center;*!*/
+/*        color: #000000;*/
+/*        background: #f4f8f3;*/
+/*        box-shadow: 0 0 10px #f4f8f3, 0 0 40px #f4f8f3, 0 0 80px #f4f8f3;*/
+/*}*/
 
 .sub-menu__link {
     text-decoration: silver;
     color: #d7deec;
-    /*padding: 10px 30px 10px 10px;*/
+    padding: 10px 10px 10px 10px;
     font-size: calc(6px + 16 * (100vw / 1200));
     margin: 0 20px 0 0;
     justify-content: center;
@@ -95,9 +94,9 @@
         position: relative;
         justify-content: center;
         align-items: center;
-        color: #255784;
-        background: #2196f3;
-        box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3 ;
+        color: #0a0d0e;
+        background: #f4f8f3;
+        box-shadow: 0 0 10px #b0d1e3, 0 0 40px #cad4de, 0 0 80px #c4d9ea;
 }
 
 .sub-menu__list {
@@ -106,7 +105,7 @@
     position: absolute;
     background: rgba(4, 42, 42, 0.1);
     left: 20px;
-    top: 20px;
+    top: 35px;
     padding: 20px 10px 0 0;
 }
 
