--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -1,19 +1,21 @@
 .mainArticle {
     display: grid;
     grid-area:  article;
-    background: rgba(4, 42, 42, 0.5);
+    background: rgba(4, 42, 42, 0.3);
     padding: 1px;
     overflow: hidden;
-
+    box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;
 }
 
 .ar {
+    justify-content: center;
     position: relative;
     min-height: 100%;
     flex-wrap: wrap;
     display: grid;
-    max-width: 1000%;
+    /*max-width: 1000%;*/
     overflow: scroll;
+
 }
 .ar > div {
     flex-basis: calc(50% - 40px);
@@ -83,7 +85,7 @@
     position: relative;
     display: grid;
     padding: 5% 8%;
-    color: #8da6ce;
+    color: aliceblue;
     text-transform: uppercase;
     letter-spacing: 2px;
     text-decoration: silver;
@@ -96,7 +98,7 @@
 .a:hover {
     margin: 6%;
     font-size:2vw;
-    color: #255784;
-    background: #2196f3;
-    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3 ;
+    color: #000000;
+    background: #e4f5dd;
+    box-shadow: 0 0 10px #dfe5ec, 0 0 40px #dce8ef, 0 0 80px #e6f2f6;
 }
