--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -2,8 +2,9 @@
     display: grid;
     grid-area: footer;
     position: relative;
-    background: rgba(4, 42, 42, 0.5);
+    background: rgba(4, 42, 42, 0.3);
     padding: 1px;
+    box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;
 }
 
 
@@ -35,5 +36,5 @@
     margin-bottom: 0;
     color: #255784;
     background: #2196f3;
-    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3 ;
+    box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;
 }
