--- a/src/App.css
+++ b/src/App.css
@@ -30,30 +30,30 @@ div.btnbg {
 
 .Content2 {
   display: grid;
-  grid-template-areas:
-          "header header header"
-          "nav article ads"
-          "footer footer footer";
-  grid-template-rows: 20% 1fr 12%;
-  grid-template-columns: 1% 90% 1%;
-  grid-gap: 5%;
-  height: 100vh;
-
-
-
+  /*grid-template-areas:*/
+  /*        "header header header"*/
+  /*        "nav article ads"*/
+  /*        "footer footer footer";*/
+  /*grid-template-rows: 20% 1fr 10%;*/
+  /*grid-template-columns: 1% 96% 1%;*/
+  /*grid-gap: 0.5%;*/
+  /*min-height: 100%;*/
+  overflow: hidden;
 }
 footer, nav, div {
-  padding: 0px;
+
   background: rgba(0, 50, 40, 0.0);
 }
 
 article {
-  margin: 1rem;
+
 }
 
 .pageFooter {
+  max-width: 100vh;
   grid-area: footer;
   background: rgba(4, 42, 42, 0.5);
+  bottom: 0;
 }
 
 .mainNav {
@@ -62,11 +62,11 @@ article {
 .siteAds {
   grid-area: ads;
 }
-.text2 {
-  display: grid;
-  grid-area: article;
-  margin-top: 50%;
-  color: #8da6ce;
-  text-align: justify;
-  position: relative;
-}
+/*.text2 {*/
+/*  display: grid;*/
+/*  grid-area: article;*/
+/*  margin-top: 50%;*/
+/*  color: #8da6ce;*/
+/*  text-align: justify;*/
+/*  position: relative;*/
+/*}*/
