--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -5,6 +5,7 @@
     background: rgba(4, 42, 42, 0.3);
     padding: 1px;
     box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;
+    margin-bottom: 0;
 }
 
 
