--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -1,22 +1,67 @@
 .Main {
-    grid-area: 2/2/2/2;
+    /*display: grid;*/
+    /*grid-area:  article;*/
+    background: rgba(4, 42, 42, 0.4);
+    /*padding: 0;*/
+    overflow: scroll;
+    height: 100vh;
+    width: 100%;
+    margin: 5rem 0;
+    justify-content: center;
+    /*box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;*/
 }
+
+::-webkit-scrollbar{
+    width: 0%;
+    height: 0%;
+}
+
+.block {
+    justify-content: center;
+    width: auto;
+    height: auto;
+    background: rgba(4, 42, 42, 0.8);
+    margin: auto;
+    box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;
+}
+
+.imgss {
+
+    background-color: rgba(4, 42, 42, 0.9);
+    display: grid;
+    border-radius: 50%;
+    width: 30%;
+    margin: auto 10rem;
+    opacity: 0.9;
+}
+
 .text3 {
     display: grid;
-    color: #8da6ce;
+    color: #f1f2f8;
     text-align: justify;
     position: center;
-    margin-left: 40%;
-
-}
-.bottom2 {
-    margin-left: 50%;
-    padding: 0;
-    display: grid;
-    position: relative;
     justify-content: center;
-    align-items: center;
-    /*min-height: 100vh;*/
-    /*background: #031321;*/
-    font-family: Consolas;
+    overflow: scroll;
+    /*margin: 1rem 2rem 2rem 2rem;*/
 }
+
+ .text2 {
+     display: grid;
+     color: #f1f2f8;
+     text-align: justify;
+     position: relative;
+     margin: 3rem 1rem 1rem 1rem;
+     justify-content: center;
+     overflow: scroll;
+}
+/*.bottom2 {*/
+/*    margin-left: 50%;*/
+/*    padding: 0;*/
+/*    display: grid;*/
+/*    position: relative;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    !*min-height: 100vh;*!*/
+/*    !*background: #031321;*!*/
+/*    font-family: Consolas;*/
+/*}*/
