--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -5,7 +5,7 @@
     height: 100vh;
     width: 100%;
     overflow: hidden;
-    box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;
+    /*box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;*/
     margin: 5rem 0;
 }
 
@@ -57,7 +57,7 @@
 }
 
 .boxes {
-    font-size: calc(20px + 16 * (100vw / 1200));
+    /*font-size: calc(20px + 16 * (100vw / 1200));*/
     padding: 0;
     margin-bottom: 0;
     display: grid;
