--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -65,8 +65,8 @@
 }
 
 .a:hover {
-    margin: 6%;
-    font-size:2vw;
+    margin: auto;
+    font-size: calc(10px + 16 * (100vw / 1200));
     color: #000000;
     background: #e4f5dd;
     box-shadow: 0 0 10px #dfe5ec, 0 0 40px #dce8ef, 0 0 80px #e6f2f6;
