--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -1,6 +1,4 @@
 .mainArticle {
-    /*display: grid;*/
-    /*grid-area:  article;*/
     background: rgba(255, 255, 255, 0.9);
     height: 100vh;
     width: 100%;
@@ -10,54 +8,41 @@
 }
 
 .ar {
-
     display: grid;
     color: #13151c;
     text-align: justify;
     position: relative;
-    margin: 4rem ;
+    margin: 2rem ;
     justify-content: center;
-
+    font-size: calc(16px + 6 * (100vw / 1200));
 }
 
-
-::-webkit-scrollbar{
-    width: 0%;
-    height: 0%;
-}
 
 .boxes {
-
-    padding: 0;
-    margin-bottom: 0;
+    padding: 0.2rem;
+    margin-bottom: 0.2rem;
     display: grid;
     position: relative;
     justify-content: center;
     align-items: center;
-
     color: #181a1f;
-
-    letter-spacing: 2px;
-    text-decoration: #1d1111;
     transition: 0.2s;
-
-
+    font-size: calc(18px + 6 * (100vw / 1200));
 }
 
-.a {
+.aInfo {
     margin: auto;
-    font-size: calc(10px + 16 * (100vw / 1200));
+    font-size: calc(16px + 16 * (100vw / 1200));
     position: relative;
-    display: grid;
     padding: 9% 8%;
-    color: #1f252a;
-
+    color: #171711;
+    text-decoration: none;
 }
 
-.a:hover {
+.aInfo:hover {
     margin: auto;
-    font-size: calc(10px + 16 * (100vw / 1200));
-    color: #000000;
-    background: #0d0d13;
-    box-shadow: 0 0 10px #526376, 0 0 40px #dce8ef, 0 0 80px #e6f2f6;
+    font-size: calc(16px + 16 * (100vw / 1200));
+    color: #180f0f;
+    background: #d2d2e0;
+    box-shadow: 0 0 10px #d1dbe7, 0 0 40px #72bee5, 0 0 80px #d7912f;
 }
