--- a/src/Login/Info/info.css
+++ b/src/Login/Info/info.css
@@ -1,24 +1,21 @@
 .mainArticleInfo {
-    /*display: grid;*/
-    /*grid-area:  article;*/
     background: rgba(255, 255, 255, 0.8);
-    height: auto;
-    width: 25rem;
-    overflow: hidden;
-    position: center;
+    overflow: auto;
+    height: 100vh;
+    width: 100%;
+    margin: 5rem 0;
+    justify-content: center;
     box-shadow: 0 0 10px #3a4538, 0 0 40px #3b453a, 0 0 80px #3f493d;
-    margin: 15rem auto ;
 }
 
-.ar {
-
+.arInfo {
     display: grid;
-    color: #f1f2f8;
+    color: #000000;
     text-align: justify;
     position: relative;
-    margin: 4rem ;
+    margin: 12rem ;
     justify-content: center;
-
+    font-size: calc(12px + 16 * (100vw / 1200));
 }
 
 
@@ -41,7 +38,7 @@
     /*font-size: calc(10px + 16 * (100vw / 1200));;*/
     /*position: relative;*/
     /*display: grid;*/
-    /*padding: 5% 8%;*/
+    padding: 5% 8%;
     color: #000000;
     /*text-transform: uppercase;*/
     letter-spacing: 2px;
@@ -53,21 +50,17 @@
 
 .a {
     margin: auto;
-    font-size: calc(10px + 16 * (100vw / 1200));
+    font-size: calc(15px + 16 * (100vw / 1200));
     position: relative;
     display: grid;
     padding: 9% 8%;
     color: #14181d;
-
-    /*letter-spacing: 2px;*/
     text-decoration: #090505;
-    /*overflow: hidden;*/
-
 }
 
 .a:hover {
     margin: auto;
-    font-size: calc(10px + 16 * (100vw / 1200));
+    font-size: calc(15px + 16 * (100vw / 1200));
     color: #000000;
     background: #e4f5dd;
     box-shadow: 0 0 10px #dfe5ec, 0 0 40px #dce8ef, 0 0 80px #e6f2f6;
